bynkc/tests/fixtures/negative/325_if_without_else_requires_unit/input.bynk
commons demo.ifreq

fn pick(flag: Bool) -> Int {
  if flag {
    5
  }
}
